refactor: Parser의 private 생성자 생성